--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -190,6 +190,7 @@ opacity:0.8;
   background: $white;
   position: fixed;
 top: 50%;
+z-index:5;
 display: none;
   &__title {
     margin-left: 89px;
@@ -243,29 +244,25 @@ display: none;
     margin-top: 44px;
     border: none;
   }
+
+}
+
   .overlay {
-    width: 320px;
+    width: 100%;
     height: 2444px;
     position: fixed;
     opacity: 0.9;
+    z-index:3;
     background-color: #fff;
-    border: 1px solid red;
     cursor: pointer;
     display: none;
-
     top: 0;
     left: 0;
-    margin-left: 190px;
-  }
+    margin-left: 0px;
 }
-}///////вернуть кав
-
-
-
-
+  }
 .footer{
 @include flexbox;
-
     flex-direction: column;
     margin-top: 58px;
     background:#f1f1f1;
@@ -295,7 +292,7 @@ height: 21px;
 &__insta:active{
 opacity:0.3;
 }
-  &__facebook {
+&__facebook {
     cursor: pointer;
 margin-right: 30px;
 width: 21px;
@@ -355,7 +352,7 @@ background: url('/src/img/sprites.png') -14px -158px;
 
 
 
-@media (min-width: 768px){
+//@media (min-width: 768px){
 
 
   // height: 88px;
@@ -391,7 +388,7 @@ background: url('/src/img/sprites.png') -14px -158px;
   // color: #444444;
   // text-decoration: none;
   // line-height: 24px;
-}
+//}
 
 
 // index
@@ -453,11 +450,11 @@ background: url('/src/img/sprites.png') -14px -158px;
   }
 }
 @media (min-width:768px){
-.catalog {
+.catalog {////лишнее?
 &__item {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 &__title {
   @include titleXlTab;
@@ -469,12 +466,13 @@ background: url('/src/img/sprites.png') -14px -158px;
   width: 760px;
 @include flexbox;
 &__logo {
-width: 113px;
-height: 46px;
-background: url('/src/img/css_sprites.png')no-repeat -744px -463px;
-cursor: pointer;
-margin-left: 48px;
+  width: 113px;
+  height: 46px;
+  background: url('/src/img/css_sprites.png')no-repeat -744px -463px;
+  cursor: pointer;
+  margin-left: 48px;
 }
+
 &__item {
 @include flexbox;
 }
@@ -496,7 +494,7 @@ margin-left: 48px;
         text-decoration: none;
         line-height: 24px;
 }
-}
+}////лишнее?
 
  // index
  .catalog {
@@ -552,14 +550,14 @@ margin-left: 48px;
 @media (min-width:768px) {
 .catalog {
  &__item {
-       display: flex;
-       flex-wrap: wrap;
-       justify-content: space-between;
+  @include flexbox;
+  flex-wrap: wrap;
+  justify-content: space-between;
   }
-     &__title {
-       @include titleXlTab;
-       align-self: flex-start;
-       margin: 0 0 59px 0;
+&__title {
+   @include titleXlTab;
+  align-self: flex-start;
+   margin: 0 0 59px 0;
      } // &__title--hot::before{
      // content: "товар недели";
      // position: absolute;
@@ -612,9 +610,9 @@ margin-left: 48px;
 
 
 .main-catalog{
-width: 768px;
-    margin-top: -35px;
-margin-top: -515px;///////как то надо изменить))
+  width: 768px;
+  margin-top: -35px;
+  margin-top: -515px; ///////как то надо изменить))
 &__title {
 @include textLg(43px, 700);
     padding:106px 0px 78px 198px;
@@ -634,64 +632,61 @@ margin-top: -515px;///////как то надо изменить))
     margin-bottom: 54px;
 }
 &__img1{
-background:url('/src/img/item2-tablet-1x.jpg')no-repeat;
-width: 334px;
-height: 334px;
-margin-left: 50px;
-margin-bottom: 54px;
-
+    background:url('/src/img/item2-tablet-1x.jpg')no-repeat;
+    width: 334px;
+    height: 334px;
+    margin-left: 50px;
+    margin-bottom: 54px;
 }
 &__img2{
-background:url('/src/img/item3-tablet-1x.jpg')no-repeat;
-width: 334px;
-height: 334px;
-margin-left: 50px;
-margin-bottom: 50px;
+    background:url('/src/img/item3-tablet-1x.jpg')no-repeat;
+    width: 334px;
+    height: 334px;
+    margin-left: 50px;
+    margin-bottom: 50px;
 }
 &__item{
-width: 345px;
-height: 333px;
-margin-top: 0px;
-border: 1px solid #ececec;
-background-color: #ffffff;
-margin-left: -18px;
+    width: 345px;
+    height: 333px;
+    margin-top: 0px;
+    border: 1px solid #ececec;
+    background-color: #ffffff;
+    margin-left: -18px;
 }
-
 &__title{
-@include textLg(20px, 700);
-line-height: 24px;
-margin-left:28px;
-margin-top: 20px;
+    @include textLg(20px, 700);
+    line-height: 24px;
+    margin-left:28px;
+    margin-top: 20px;
 }
 &__descr{
-@include textLg(15px, 400);
-color:#444444;
-line-height: 30px;
-margin-top: -55px;
- padding-bottom: 170px;
- border-bottom: 1px solid #ececec;
- width: 268px;
-margin-left: 30px;
+    @include textLg(15px, 400);
+    color:#444444;
+    line-height: 30px;
+    margin-top: -55px;
+    padding-bottom: 170px;
+    border-bottom: 1px solid #ececec;
+    width: 268px;
+    margin-left: 30px;
 }
-  .catalog-price {
-@include flexbox;
-width: 268px;
-  justify-content: space-between;
-  margin-left: 30px;
+.catalog-price {
+    @include flexbox;
+    width: 268px;
+    justify-content: space-between;
+    margin-left: 30px;
 &__number{
-margin-top: 20px;
+    margin-top: 20px;
 }
 }
-}//////
-
+}
 .player-video {
-@include flexbox;
-width: 668px;
-height: 740px;
-margin-left: 50px;
+    @include flexbox;
+    width: 668px;
+    height: 740px;
+    margin-left: 50px;
 .player-process {
-@include flexbox;
-order: 2;
+    @include flexbox;
+    order: 2;
     margin-top: 43px;
 &__title {
     @include textLg(20px, 700);
@@ -700,30 +695,30 @@ order: 2;
     width: 241px;
 }
 &__link-pic{
-background:url('/src/img/sprites.png') -314px -263px;
-	width: 32px;
-	height: 22px;
-margin-left: 12px;
+    background:url('/src/img/sprites.png') -314px -263px;
+	  width: 32px;
+	  height: 22px;
+    margin-left: 12px;
     margin-top: -45px;
     position: absolute;
 }
 }
 .video-page {
 &__video img {
-background: url('/src/img/video-tablet-1x.jpg')no-repeat;
-width: 668px;
-height: 455px;
-margin-left: 0px;
-margin-bottom: 39px;
-margin-top: -20px;///hjhhhkj-----
+    background: url('/src/img/video-tablet-1x.jpg')no-repeat;
+    width: 668px;
+    height: 455px;
+    margin-left: 0px;
+    margin-bottom: 39px;
+    margin-top: -20px;
     order: 1;
-    }
+}
 &__link-pic{
-cursor: pointer;
-background:url('/src/img/sprites.png') -739px -11px;
-width: 102px;
-height: 78px;
- margin-top: -308px;
+    width: 102px;
+    height: 78px;
+    cursor: pointer;
+    background:url('/src/img/sprites.png') -739px -11px;
+    margin-top: -308px;
     position: absolute;
     margin-left: 280px;
 }
@@ -740,25 +735,25 @@ height: 78px;
     width: 584px;
     height: 52px;
     order:4;
-    border: 2px solid #444444;
-    background-color: #ffffff;
-
+    border: 2px solid $darkGray;
+    background-color: $white;
     margin-top: 23px;
-margin-left: 42px;
-padding:16px 0px 16px 0px;
+    margin-left: 42px;
+    padding:16px 0px 16px 0px;
 }
- .modal-ctg {
+.modal-ctg {
    margin-top: -250px;
    margin-left: 50px;
    width: 566px;
    height: 336px;
    box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
    border: 1px solid #c6c6c6;
-   background: #fff;
-   position: fixed;
+   background: $white;
+  position: fixed;
    top: 50%;
-display: none;
-   &__title {
+  z-index:5;
+  display: none;
+&__title {
      width: 355px;
      height: 29px;
      margin-top: 45px;
@@ -766,46 +761,45 @@ display: none;
      @include textLg(30px, 700);
      line-height: 57px;
      text-transform: uppercase;
-   }
-   &__text {
-     @include textLg(17px, 400);
-     line-height: 30px;
-     color: $darkGray;
-     text-align: center;
-     margin-top: 12px;
+}
+&__text {
+    @include textLg(17px, 400);
+    line-height: 30px;
+    color: $darkGray;
+    text-align: center;
+    margin-top: 12px;
    }
    &__form {
      width: 360px;
      margin-top: 38px;
      margin-left: 108px;
-   }
-   &__input {
+}
+&__input {
      display: none;
-   }
-   &__size {
+}
+&__size {
      padding: 20px 50px;
      cursor: pointer;
      border: 2px solid #c6c6c6;
      @include textLg(17px, 700);
-     background-color: #ffffff;
-     color: #444444;
-     line-height: 16px;
-   }
-&__size:hover {
-  border: 2px solid #444444;
+     background-color: $white;
+    color: $darkGray;
+    line-height: 16px;
 }
-
-   &__size:active {
-     border: 2px solid #63d1bb;
-   }
-   &__input:checked+&__size {
-     border: 2px solid #63d1bb;
-   }
-   &__btn {
+&__size:hover {
+  border: 2px solid $darkGray;
+}
+&__size:active {
+     border: 2px solid $greenLeft;
+}
+&__input:checked+&__size {
+    border: 2px solid $greenLeft;
+}
+&__btn {
      width: 355px;
      height: 52px;
-     background-color: #63d1bb;
-     cursor: pointer;
+     background-color: $greenLeft;
+    cursor: pointer;
      @include textLg(17px, 700);
      line-height: 16px;
      color: $white;
@@ -814,53 +808,48 @@ display: none;
      margin-top: 51px;
      border: none;
    }
+}
    .overlay {
-     width: 320px;
+     width: 100%;
      height: 2444px;
      position: fixed;
      opacity: 0.9;
      background-color: #fff;
-     border: 1px solid red;
-     cursor: pointer;
+      cursor: pointer;
      display: none;
      z-index: 3;
      top: 0;
      left: 0;
      margin-left: 10px;
    }
- }
-
-
 
 }
-}////на место
-
+}
 .footer{
-flex:0 0 auto;
-flex-direction: row;
- width: 760px;
-height: 143px;
-background:#f1f1f1;
-margin-top: 63px;
+    flex:0 0 auto;
+    flex-direction: row;
+     width: 760px;
+    height: 143px;
+    background:#f1f1f1;
+    margin-top: 63px;
 &__logo{
-width: 102px;
-height: 34px;
-background: url('/src/img/sprites.png') -603px -88px;
-margin-top: 51px;
-margin-left: 50px;
-cursor: pointer;
+    width: 102px;
+    height: 34px;
+    background: url('/src/img/sprites.png') -603px -88px;
+    margin-top: 51px;
+    margin-left: 50px;
+    cursor: pointer;
 }
- &__social{
- margin-top: 63px;
- margin-left: 69px;
- }
+&__social{
+    margin-top: 63px;
+    margin-left: 69px;
+}
 &__copyright{
 margin-top: 38px;
 margin-left: -20px;
 }
 }
-
-  }
+}
 @media screen and (min-width: 1150px)  {
 body{
 //box-sizing:border-box;
@@ -973,10 +962,10 @@ background-color: #ffffff;
 margin-left: 80px;
 margin-top: 60px;
 }
-}
+
  .modal-ctg {
    margin-top: -250px;
-   margin-left: 150px;
+   margin-left: 240px;
    width: 566px;
    height: 336px;
    box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
@@ -984,6 +973,7 @@ margin-top: 60px;
    background: #fff;
    position:fixed;
    top: 50%;
+  z-index:5;
   display: none;
    &__title {
      width: 355px;
@@ -1040,22 +1030,21 @@ margin-top: 60px;
      margin-top: 51px;
      border: none;
    }
+}
    .overlay {
-     width: 320px;
+     width: 100%;
      height: 2444px;
      position: fixed;
      opacity: 0.9;
      background-color: #fff;
-     border: 1px solid red;
-     cursor: pointer;
+    cursor: pointer;
      display: none;
      z-index: 3;
      top: 0;
      left: 0;
-     margin-left: 10px;
+     margin-left: 0px;
    }
- }
-
+}
 
 }
 .footer{
