normalize/picturefill/html hamburger fixed

--- a/src/style/blocks/global/body.scss
+++ b/src/style/blocks/global/body.scss
@@ -2,6 +2,7 @@ body {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     margin: 0 auto;
     width: 320px;
+    
 }
 header {
     min-height: 568px;
@@ -9,6 +10,10 @@ header {
 main {
     margin: 0 auto;
     width: 260px;
+}
+img{
+    max-width: 100%;
+    height: auto;
 }
 @media (min-width:768px){
 
