--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,9 +1,9 @@
 @import '_variables.scss';
 @import '_mixin.scss';
+@import '_normalize.scss';
 
 @import 'blocks/global/body.scss';
 @import 'sprites.scss';
-
 
 
 @import 'blocks/pageHeader/topMenu.scss';
