--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -1,88 +1,158 @@
 .footer{
+@include flexbox;
+ flex-direction: column;
+margin-top: 58px;
+background:#f1f1f1;
+height: 160px;
+width: 320px;
 
     &__social{
-        cursor: pointer;
+cursor: pointer;
+//@include flexbox;
+//justify-content: space-between;
+margin-top: 30px;
+border-bottom:1px solid #e5e5e5;
+padding-bottom: 30px;
+width: 260px;
+margin-left: 30px;
+
     }
 
     &__insta {
         display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat;
-        background-position: -15px -61px ;
+        background: url(/src/img/sprites.png) -15px -61px;
+
+        //background-position: -15px -61px ;
     	width: 22px;
         height: 21px;
-        margin: 0;
+        margin-right: 40px;
+margin-left: 50px;
     }
 
     &__insta:hover{
-        display: inline-block;
+        //display: inline-block;
         background: url(/src/img/sprites.png) no-repeat;
         background-position: -63px -62px ;
 	    width: 22px;
         height: 21px;
-        margin: 0;
+       // margin: 0;
     }
 
     &__insta:active{
-        display: inline-block;
+        //display: inline-block;
         background: url(/src/img/sprites.png) no-repeat;
         background-position: -115px -61px ;
 	    width: 22px;
         height: 21px;
-        margin: 0;
+        //margin: 0;
     }
 
     &__facebook{
         display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat;
-        background-position: -17px -110px ;
+        background: url(/src/img/sprites.png) -17px -110px;
+
+        //background-position: -17px -110px ;
 	    width: 15px;
         height: 29px;
-        margin: 0;
+        margin-right: 40px;
     }
 
     &__facebook:hover{
         display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat;
-        background-position: -64px -110px ;
+        background: url(/src/img/sprites.png) -64px -110px;
+
+        //background-position: -64px -110px ;
 	    width: 15px;
         height: 28px;
-        margin: 0;
+        //margin: 0;
     }
 
     &__facebook:active{
         display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat;
-        background-position: -114px -111px ;
+        background: url(/src/img/sprites.png) no-repeat -114px -111px;
+        //background-position: -114px -111px ;
 	    width: 15px;
         height: 28px;
-        margin: 0;
+       // margin: 0;
     }
 
     &__twitter{
         display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat;
-        background-position: -14px -14px ;
+        background: url(/src/img/sprites.png) no-repeat -14px -14px;
+        //background-position: -14px -14px ;
 	    width: 24px;
         height: 20px;
-        margin: 0;
+        //margin: 0;
     }
 
-    &__twitter:hover{
+&__twitter:hover{
         display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat;
-        background-position: -61px -15px ;
+        background: url(/src/img/sprites.png) no-repeat -61px -15px;
+      //background-position: -61px -15px ;
 	    width: 23px;
         height: 20px;
-        margin: 0;
+       // margin: 0;
     }
-
-    &__twitter:active{
+&__twitter:active{
         display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat;
-        background-position: -111px -14px ;
+        background: url(/src/img/sprites.png) no-repeat -111px -14px;
+
+        //background-position: -111px -14px ;
 	    width: 23px;
         height: 20px;
-        margin: 0;
+        //margin: 0;
 
     }
 }
+@media (min-width: 768px){
+  .footer {
+  flex:0 0 auto;
+  flex-direction: row;
+  width: 760px;
+  height: 143px;
+  background:#f1f1f1;
+  margin-top: 63px;
+  &__logo{
+  width: 102px;
+  height: 34px;
+  background: url('/src/img/sprites.png') -603px -88px;
+  margin-top: 51px;
+  margin-left: 50px;
+  cursor: pointer;
+  }
+  &__social{
+  margin-top: 63px;
+  margin-left: 69px;
+  }
+  &__copyright{
+  margin-top: 38px;
+  margin-left: -20px;
+  }
+  }
+}
+@media screen and (min-width: 1150px){
+  .footer {
+  width: 100%;
+  display: flex;
+&__logo{
+  margin-left: 50px;
+  }
+  &__logo:hover{
+  background:url('/src/img/sprites.png') -600px -132px;
+  width: 102px;
+  height: 34px;
+  }
+  &__logo:active{
+  opacity:0.3;
+  }
+  &__social{
+  margin-left: 300px;
+  }
+  &__copyright{
+  margin-left: 140px;
+  }
+  }
+
+}
+
+
