--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -1,7 +1,21 @@
 .footer{
 
+    display: block;
+
+    height: 160px;
+    background: $lightGray;
+
     &__social{
         cursor: pointer;
+        height: 50%;
+        border-bottom: 1px solid;
+        width: 260px;
+        margin: 0px auto;
+        text-align: center;
+    }
+
+    &__link{
+        padding: 10px;
     }
 
     &__insta {
@@ -10,7 +24,7 @@
         background-position: -15px -61px ;
     	width: 22px;
         height: 21px;
-        margin: 0;
+        margin: 30px 10px 0px 10px;
     }
 
     &__insta:hover{
@@ -19,7 +33,7 @@
         background-position: -63px -62px ;
 	    width: 22px;
         height: 21px;
-        margin: 0;
+        margin: 30px 10px 0px 10px;
     }
 
     &__insta:active{
@@ -28,7 +42,7 @@
         background-position: -115px -61px ;
 	    width: 22px;
         height: 21px;
-        margin: 0;
+        margin: 30px 10px 0px 10px;
     }
 
     &__facebook{
@@ -37,7 +51,7 @@
         background-position: -17px -110px ;
 	    width: 15px;
         height: 29px;
-        margin: 0;
+        margin: 30px 10px 0px 10px;
     }
 
     &__facebook:hover{
@@ -46,7 +60,7 @@
         background-position: -64px -110px ;
 	    width: 15px;
         height: 28px;
-        margin: 0;
+        margin: 30px 10px 0px 10px;
     }
 
     &__facebook:active{
@@ -55,7 +69,7 @@
         background-position: -114px -111px ;
 	    width: 15px;
         height: 28px;
-        margin: 0;
+        margin: 30px 10px 0px 10px;
     }
 
     &__twitter{
@@ -64,7 +78,7 @@
         background-position: -14px -14px ;
 	    width: 24px;
         height: 20px;
-        margin: 0;
+        margin: 30px 10px 0px 10px;
     }
 
     &__twitter:hover{
@@ -73,7 +87,7 @@
         background-position: -61px -15px ;
 	    width: 23px;
         height: 20px;
-        margin: 0;
+        margin: 30px 10px 0px 10px;
     }
 
     &__twitter:active{
@@ -82,7 +96,7 @@
         background-position: -111px -14px ;
 	    width: 23px;
         height: 20px;
-        margin: 0;
+        margin: 30px 10px 0px 10px;
 
     }
 }
