--- a/src/style/_mixin.scss
+++ b/src/style/_mixin.scss
@@ -35,6 +35,11 @@
   font-size: 17px;
   line-height: calc(30/17);
  }
+ @mixin menuItemTab {
+   font-size: 20px;
+   line-height: calc(30/20);
+   font-weight: 700;
+ }
  @mixin titleXlTab {
    font-size: 43px;
    line-height: calc(50/43);
