--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -5,39 +5,31 @@ margin-top: 58px;
 background:#f1f1f1;
 height: 160px;
 width: 320px;
-
-    display: block;
-
-    height: 160px;
-    background: $lightGray;
-
-    &__social{
+background: $lightGray;
+&__social{
 cursor: pointer;
-//@include flexbox;
+@include flexbox;
 //justify-content: space-between;
 margin-top: 30px;
 border-bottom:1px solid #e5e5e5;
 padding-bottom: 30px;
 width: 260px;
 margin-left: 30px;
-
-    }
-
-    &__insta {
+}
+&__insta {
         display: inline-block;
-        background: url(/src/img/sprites.png) -15px -61px;
-
-        //background-position: -15px -61px ;
-    	width: 22px;
+        background: url('/src/img/sprites.png') no-repeat -15px -61px;
+      width: 22px;
         height: 21px;
         margin-right: 40px;
-margin-left: 50px;
+        margin-left: 50px;
     }
 
     &__insta:hover{
         //display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat;
-        background-position: -63px -62px ;
+        background: url('/src/img/sprites.png') no-repeat -63px -62px;
+
+       // background-position: -63px -62px ;
 	    width: 22px;
         height: 21px;
        // margin: 0;
@@ -45,8 +37,9 @@ margin-left: 50px;
 
     &__insta:active{
         //display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat;
-        background-position: -115px -61px ;
+        background: url('/src/img/sprites.png') no-repeat  -115px -61px;
+
+        //background-position: -115px -61px ;
 	    width: 22px;
         height: 21px;
         //margin: 0;
@@ -54,27 +47,23 @@ margin-left: 50px;
 
     &__facebook{
         display: inline-block;
-        background: url(/src/img/sprites.png) -17px -110px;
-
-        //background-position: -17px -110px ;
-	    width: 15px;
+        background: url('/src/img/sprites.png') -17px -110px;
+        width: 15px;
         height: 29px;
         margin-right: 40px;
     }
 
     &__facebook:hover{
-        display: inline-block;
-        background: url(/src/img/sprites.png) -64px -110px;
-
-        //background-position: -64px -110px ;
-	    width: 15px;
+        //display: inline-block;
+        background: url('/src/img/sprites.png') -64px -110px;
+        width: 15px;
         height: 28px;
         //margin: 0;
     }
 
     &__facebook:active{
-        display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat -114px -111px;
+        //display: inline-block;
+        background: url('/src/img/sprites.png')  -114px -111px;
         //background-position: -114px -111px ;
 	    width: 15px;
         height: 28px;
@@ -83,7 +72,7 @@ margin-left: 50px;
 
     &__twitter{
         display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat -14px -14px;
+        background: url('/src/img/sprites.png')  -14px -14px;
         //background-position: -14px -14px ;
 	    width: 24px;
         height: 20px;
@@ -91,16 +80,16 @@ margin-left: 50px;
     }
 
 &__twitter:hover{
-        display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat -61px -15px;
+        //display: inline-block;
+        background: url('/src/img/sprites.png')  -61px -15px;
       //background-position: -61px -15px ;
 	    width: 23px;
         height: 20px;
        // margin: 0;
     }
 &__twitter:active{
-        display: inline-block;
-        background: url(/src/img/sprites.png) no-repeat -111px -14px;
+        //display: inline-block;
+        background: url('/src/img/sprites.png')  -111px -14px;
 
         //background-position: -111px -14px ;
 	    width: 23px;
@@ -111,9 +100,9 @@ margin-left: 50px;
 }
 @media (min-width: 768px){
   .footer {
-  flex:0 0 auto;
-  flex-direction: row;
-  width: 760px;
+@include flexbox;
+flex-direction: row;
+  width: 768px;
   height: 143px;
   background:#f1f1f1;
   margin-top: 63px;
@@ -138,7 +127,8 @@ margin-left: 50px;
 @media screen and (min-width: 1150px){
   .footer {
   width: 100%;
-  display: flex;
+@include flexbox;
+margin-top: 105px;
 &__logo{
   margin-left: 50px;
   }
