--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -1,55 +1,51 @@
-.footer{
-@include flexbox;
- flex-direction: column;
-margin-top: 58px;
-background:#f1f1f1;
-height: 160px;
-width: 320px;
+.footer {
+    @include flexbox;
+    flex-direction: column;
+    margin-top: 58px;
+    background: $lightGray;
+    height: 160px;
+    width: 320px;
 
-    
-
-    // height: 160px;
-    // background: $lightGray;
-
-    &__social{
-background: $lightGray;
-&__social{
-cursor: pointer;
-@include flexbox;
-//justify-content: space-between;
-margin-top: 30px;
-border-bottom:1px solid #e5e5e5;
-padding-bottom: 30px;
-width: 260px;
-margin-left: 30px;
-}
-&__insta {
+    &__link {
+        align-self: center;
+        padding: 5px;
+    }
+     &__social {
+        cursor: pointer;
+        @include flexbox;
+        height: 80px;
+        width: 260px;
+        border-bottom:1px solid $frameMenu;
+        // margin-top: 30px;
+        // margin-left: 30px;
+        // padding-bottom: 30px;   
+        margin: 0 auto;
+        justify-content: space-evenly;    
+    }
+    &__insta {
         display: inline-block;
         background: url('/src/img/sprites.png') no-repeat -15px -61px;
-      width: 22px;
+        width: 22px;
         height: 21px;
-        margin-right: 40px;
-        margin-left: 50px;
+        margin: 0;
+        // margin-right: 40px;
+        // margin-left: 50px;
     }
 
     &__insta:hover{
-        //display: inline-block;
+        display: inline-block;
         background: url('/src/img/sprites.png') no-repeat -63px -62px;
-
-       // background-position: -63px -62px ;
 	    width: 22px;
         height: 21px;
-       // margin: 0;
+       margin: 0;
     }
 
     &__insta:active{
-        //display: inline-block;
+        display: inline-block;
         background: url('/src/img/sprites.png') no-repeat  -115px -61px;
-
-        //background-position: -115px -61px ;
 	    width: 22px;
         height: 21px;
-        //margin: 0;
+        margin: 0;
     }
 
     &__facebook{
@@ -57,88 +53,89 @@ margin-left: 30px;
         background: url('/src/img/sprites.png') -17px -110px;
         width: 15px;
         height: 29px;
-        margin-right: 40px;
+        // margin-right: 40px;
+        margin: 0;
     }
 
     &__facebook:hover{
-        //display: inline-block;
+        display: inline-block;
         background: url('/src/img/sprites.png') -64px -110px;
         width: 15px;
         height: 28px;
-        //margin: 0;
+        margin: 0;
     }
 
     &__facebook:active{
-        //display: inline-block;
+        display: inline-block;
         background: url('/src/img/sprites.png')  -114px -111px;
-        //background-position: -114px -111px ;
 	    width: 15px;
         height: 28px;
-       // margin: 0;
+       margin: 0;
     }
 
     &__twitter{
         display: inline-block;
         background: url('/src/img/sprites.png')  -14px -14px;
-        //background-position: -14px -14px ;
 	    width: 24px;
         height: 20px;
-        //margin: 0;
+        margin: 0;
     }
 
-&__twitter:hover{
-        //display: inline-block;
+    &__twitter:hover{
+        display: inline-block;
         background: url('/src/img/sprites.png')  -61px -15px;
-      //background-position: -61px -15px ;
 	    width: 23px;
         height: 20px;
-       // margin: 0;
+       margin: 0;
     }
-&__twitter:active{
-        //display: inline-block;
-        background: url('/src/img/sprites.png')  -111px -14px;
 
-        //background-position: -111px -14px ;
+    &__twitter:active{
+        display: inline-block;
+        background: url('/src/img/sprites.png')  -111px -14px;
 	    width: 23px;
         height: 20px;
-        //margin: 0;
-
+        margin: 0;
     }
 }
 @media (min-width: 768px){
-  .footer {
-@include flexbox;
-flex-direction: row;
-  width: 768px;
-  height: 143px;
-  background:#f1f1f1;
-  margin-top: 63px;
+
+     .footer {
+        @include flexbox;
+        flex-direction: row;
+        width: 768px;
+        height: 143px;
+        align-items: center;
+        justify-content: space-around;
+
   &__logo{
   width: 102px;
   height: 34px;
   background: url('/src/img/sprites.png') -603px -88px;
-  margin-top: 51px;
-  margin-left: 50px;
+//   margin-top: 51px;
+//   margin-left: 50px;
   cursor: pointer;
   }
   &__social{
-  margin-top: 63px;
-  margin-left: 69px;
+      border: none;
+      margin: 0;
+//   margin-top: 63px;
+//   margin-left: 69px;
   }
-  &__copyright{
-  margin-top: 38px;
-  margin-left: -20px;
-  }
+//   &__copyright{
+//   margin-top: 38px;
+//   margin-left: -20px;
+//   }
   }
 }
-@media screen and (min-width: 1150px){
+@media screen and (min-width: 1024px){
   .footer {
   width: 100%;
 @include flexbox;
 margin-top: 105px;
-&__logo{
-  margin-left: 50px;
-  }
+// justify-content: space-evenly;
+// &__logo{
+//   margin-left: 50px;
+//   }
   &__logo:hover{
   background:url('/src/img/sprites.png') -600px -132px;
   width: 102px;
@@ -148,14 +145,15 @@ margin-top: 105px;
   opacity:0.3;
   }
   &__social{
-  margin-left: 300px;
+//   margin-left: 300px;
+  flex-basis: 200px;
+  margin: 0;
   }
-  &__copyright{
-  margin-left: 140px;
-  }
+//   &__copyright{
+//   margin-left: 140px;
+//   }
   }
 
 }
 
 
-}
