--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -63,7 +63,7 @@ line-height: 30px;
   color: $darkGray;
   line-height: 30px;
   margin-left: 30px;
-  margin-top: -50px;
+  // margin-top: -50px;
   padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
   width: 204px;
